implemented some form ideas - ingredients add/remove

--- a/recipe-api.html
+++ b/recipe-api.html
@@ -20,6 +20,33 @@
     <div id="main">
       <div id="overlay" class="hidden"></div>
       <div id="sidebar">
+        <div id="ingredientsList">
+          <h3>All ingredients:</h3>
+          <!-- <button value="14412">Water</button>
+          <button value="20081">flour</button>
+          <button value="2047">salt</button>
+          <button value="19335">sugar</button> -->
+          <button>apple</button>
+          <button>baking powder</button>
+          <button>banana</button>
+          <button>rice</button>
+          <button>beans</button>
+          <button>beef</button>
+          <button>bread</button>
+          <button>broccoli</button>
+          <button>chocolate</button>
+          <button>butter</button>
+          <button>cheese</button>
+          <button>anchovies</button>
+        </div>
+        <div id="usedIngredients">
+          <h3>My ingredients:</h3>
+          <small>(click to remove)</small>
+          <span value="water">Water, </span>
+          <span value="flour">Flour, </span>
+          <span value="salt">Salt, </span>
+          <span value="sugar">Sugar, </span>
+        </div>
         <h2>Click to get your recipe</h2>
         <button id="init">Get recipe</button>
       </div>
