new checkbox in form, css changes

--- a/recipe-api.html
+++ b/recipe-api.html
@@ -25,7 +25,12 @@
           <label>Number of recipes</label>
           <br />
           <input type="checkbox" id="allUsed" checked />
-          <label>Try to limit ingredients</label>
+          <label>Zero waste mode</label>
+          <br />
+          <input type="checkbox" id="ingredientsData" checked />
+          <label>More ingredients data</label>
+          <br />
+          <small>(this may limit results)</small>
         </div>
         <div id="ingredientsList">
           <h3>All ingredients:</h3>
