main page - whats in my fridge app link added

--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
                 >Map Generator</a
               >
             </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://xanoosh.github.io/portfolio/recipe-api.html"
+                >What's in my fridge app</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -307,13 +314,8 @@
           <div class="col-12 my-5">
             <div class="row">
               <!-- some cards start -->
-              <div class="col-lg-3 col-sm-6 mb-md-0 mb-3">
+              <div class="col-lg-3 col-sm-6 mb-3">
                 <div class="card" data-aos="fade-up">
-                  <img
-                    src="https://via.placeholder.com/300x300?text=Project placeholder "
-                    class="card-img-top d-sm-block d-none"
-                    alt="..."
-                  />
                   <div class="card-body">
                     <h5 class="card-title">Dice Game</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
@@ -329,13 +331,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-sm-6 mb-md-0 mb-3">
+              <div class="col-lg-3 col-sm-6 mb-3">
                 <div class="card" data-aos="fade-up">
-                  <img
-                    src="https://via.placeholder.com/300x300?text=Project placeholder "
-                    class="card-img-top d-sm-block d-none"
-                    alt="..."
-                  />
                   <div class="card-body">
                     <h5 class="card-title">Quiz</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
@@ -351,13 +348,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-sm-6 mb-md-0 mb-3">
+              <div class="col-lg-3 col-sm-6 mb-3">
                 <div class="card" data-aos="fade-up">
-                  <img
-                    src="https://via.placeholder.com/300x300?text=Project placeholder "
-                    class="card-img-top d-sm-block d-none"
-                    alt="..."
-                  />
                   <div class="card-body">
                     <h5 class="card-title">Memory game</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
@@ -373,13 +365,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-sm-6 mb-md-0 mb-3">
+              <div class="col-lg-3 col-sm-6 mb-3">
                 <div class="card" data-aos="fade-up">
-                  <img
-                    src="https://via.placeholder.com/300x300?text=Project placeholder "
-                    class="card-img-top d-sm-block d-none"
-                    alt="..."
-                  />
                   <div class="card-body">
                     <h5 class="card-title">Map Generator</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
@@ -395,13 +382,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-sm-6 mb-md-0 mb-3">
+              <div class="col-lg-3 col-sm-6 mb-3">
                 <div class="card" data-aos="fade-up">
-                  <img
-                    src="https://via.placeholder.com/300x300?text=Project placeholder "
-                    class="card-img-top d-sm-block d-none"
-                    alt="..."
-                  />
                   <div class="card-body">
                     <h5 class="card-title">"What's in my fridge" App</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
