--- a/recipe-api.html
+++ b/recipe-api.html
@@ -22,22 +22,41 @@
       <div id="sidebar">
         <div id="formData">
           <input type="number" id="numOfRecipes" min="1" max="15" value="10" />
-          <label>Number of recipes</label>
+          <label for="numOfRecipes">Number of recipes</label>
           <br />
-          <input type="checkbox" id="allUsed" checked />
+          <!-- <input type="checkbox" id="allUsed" checked />
           <label>Zero waste mode</label>
           <br />
           <input type="checkbox" id="ingredientsData" checked />
           <label>More ingredients data</label>
           <br />
-          <small>(this may limit results)</small>
+          <small>(this may limit results)</small> -->
+          <div>
+            <input
+              type="radio"
+              id="radioMax"
+              name="option"
+              value="&ranking=1"
+              checked
+            />
+            <label for="radioMax">Maximize used ingredients</label>
+          </div>
+          <div>
+            <input
+              type="radio"
+              name="option"
+              value="&ranking=2"
+              id="radioMin"
+            />
+            <label for="radioMin">Minimize missing ingredients</label>
+          </div>
         </div>
         <div id="ingredientsList">
           <h3>All ingredients:</h3>
-          <!-- <button value="14412">Water</button>
-          <button value="20081">flour</button>
-          <button value="2047">salt</button>
-          <button value="19335">sugar</button> -->
+          <button>water</button>
+          <button>flour</button>
+          <button>salt</button>
+          <button>sugar</button>
           <button>apple</button>
           <button>baking powder</button>
           <button>banana</button>
