used set to validate ingrediens data, improved ingredients adding/removing

--- a/recipe-api.html
+++ b/recipe-api.html
@@ -97,9 +97,8 @@
         <div id="usedIngredients">
           <h3>My ingredients:</h3>
           <small class="arrow">click to remove</small>
-          <span value="water">Water, </span>
-          <span value="salt">Salt, </span>
-          <span value="sugar">Sugar, </span>
+          <span value="water">water, </span><span value="salt">salt, </span
+          ><span value="sugar">sugar</span>
         </div>
         <button id="init">Get recipes</button>
       </div>
