validation and html change

--- a/recipe-api.html
+++ b/recipe-api.html
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div id="usedIngredients">
-          <h3>My ingredients:</h3>
+          <h3>Used ingredients:</h3>
           <small class="arrow">click below to remove</small>
           <span value="water">water, </span><span value="salt">salt, </span
           ><span value="sugar">sugar</span>
