changes in food categories

--- a/recipe-api.html
+++ b/recipe-api.html
@@ -51,6 +51,12 @@
               <button class="bar active" value="meat">Meat</button>
             </div>
             <div class="group-item">
+              <button class="bar" value="dairy">Dairy</button>
+            </div>
+            <div class="group-item">
+              <button class="bar" value="grain">Grain</button>
+            </div>
+            <div class="group-item">
               <button class="bar" value="fruits">Fruits</button>
             </div>
             <div class="group-item">
@@ -69,6 +75,26 @@
               <button>lamb</button>
               <button>salmon</button>
               <button>anchovies</button>
+              <button>tuna</button>
+              <button>shrimp</button>
+              <button>sardine</button>
+            </div>
+            <div class="group dairy">
+              <button>butter</button>
+              <button>cheese</button>
+              <button>milk</button>
+              <button>yogurt</button>
+              <button>cream</button>
+            </div>
+            <div class="group grain">
+              <button>flour</button>
+              <button>rice</button>
+              <button>pasta</button>
+              <button>noodle</button>
+              <button>bread</button>
+              <button>bun</button>
+              <button>oatmeal</button>
+              <button>cereal</button>
             </div>
             <div class="group fruits">
               <button>apple</button>
@@ -92,14 +118,10 @@
             <div class="group other">
               <button>water</button>
               <button>baking powder</button>
-              <button>rice</button>
-              <button>flour</button>
               <button>salt</button>
+              <button>pepper</button>
               <button>sugar</button>
-              <button>bread</button>
               <button>chocolate</button>
-              <button>butter</button>
-              <button>cheese</button>
             </div>
           </div>
         </div>
