implementing mobile version

--- a/recipe-api.html
+++ b/recipe-api.html
@@ -60,7 +60,7 @@
               <button class="bar" value="fruits">Fruits</button>
             </div>
             <div class="group-item">
-              <button class="bar" value="vegetables">Vegetables</button>
+              <button class="bar" value="vegetables">Veg.</button>
             </div>
             <div class="group-item">
               <button class="bar" value="other">Other</button>
@@ -131,9 +131,11 @@
           <span value="water">water, </span><span value="salt">salt, </span
           ><span value="sugar">sugar</span>
         </div>
-        <button id="init">Get recipes</button>
+        <button value="list" id="init" class="scroll">Get recipes</button>
       </div>
-      <div id="list" class="hidden"></div>
+      <div id="list" class="hidden">
+        <button value="sidebar" class="scroll">Back</button>
+      </div>
     </div>
     <script>
       document.write(
