modal fix, replaced span with buttons

--- a/recipe-api.html
+++ b/recipe-api.html
@@ -129,11 +129,12 @@
           <h3>Used ingredients:</h3>
           <small class="arrow">click below to remove</small>
           <div id="ingredientsWindow">
-            <span value="water">water, </span><span value="salt">salt, </span
-            ><span value="sugar">sugar</span>
+            <button value="water">water</button
+            ><button value="salt">salt</button
+            ><button value="sugar">sugar</button>
           </div>
         </div>
-        <button value="list" id="init" class="scroll">Get recipes</button>
+        <button value="list" id="init" class="scroll">Generate</button>
       </div>
       <div id="list" class="hidden">
         <button value="sidebar" class="scroll">Back</button>
