--- a/recipe-api.html
+++ b/recipe-api.html
@@ -82,8 +82,13 @@
             <div class="group dairy">
               <button>butter</button>
               <button>cheese</button>
+              <button>mozzarella</button>
               <button>milk</button>
+              <button>powdered milk</button>
               <button>yogurt</button>
+              <button>ayran</button>
+              <button>kefir</button>
+              <button>whey</button>
               <button>cream</button>
             </div>
             <div class="group grain">
@@ -93,11 +98,17 @@
               <button>noodle</button>
               <button>bread</button>
               <button>bun</button>
+              <button>crackers</button>
+              <button>tortilla</button>
               <button>oatmeal</button>
               <button>cereal</button>
+              <button>Popcorn</button>
             </div>
             <div class="group fruits">
               <button>apple</button>
+              <button>pear</button>
+              <button>peach</button>
+              <button>plum</button>
               <button>banana</button>
               <button>strawberry</button>
               <button>orange</button>
@@ -114,12 +125,18 @@
               <button>broccoli</button>
               <button>mushroom</button>
               <button>lettuce</button>
+              <button>cauliflower</button>
+              <button>pumpkin</button>
             </div>
             <div class="group other">
               <button>water</button>
               <button>baking powder</button>
               <button>salt</button>
               <button>pepper</button>
+              <button>chili pepper</button>
+              <button>basil</button>
+              <button>curry</button>
+              <button>cinnamon</button>
               <button>sugar</button>
               <button>chocolate</button>
             </div>
