--- a/memo.html
+++ b/memo.html
@@ -21,6 +21,7 @@
     <div id="board">
       <div id="win" class="hidden">
         <h1>Epic win</h1>
+        <button onclick="window.location.reload();">New game</button>
       </div>
     </div>
     <script>
