implementation of search input (recipe API)

--- a/recipe-api.html
+++ b/recipe-api.html
@@ -46,6 +46,14 @@
         </div>
         <div id="ingredientsList">
           <h3>All ingredients:</h3>
+          <div class="autocomplete-container">
+            <input
+              class="autocomplete-input"
+              type="text"
+              placeholder="Search..."
+            />
+            <div class="autocomplete-list"></div>
+          </div>
           <div class="group-bar">
             <div class="group-item">
               <button class="bar active" value="meat">Meat</button>
@@ -102,7 +110,7 @@
               <button>tortilla</button>
               <button>oatmeal</button>
               <button>cereal</button>
-              <button>Popcorn</button>
+              <button>popcorn</button>
             </div>
             <div class="group fruits">
               <button>apple</button>
@@ -119,8 +127,8 @@
             <div class="group vegetables">
               <button>beans</button>
               <button>carrot</button>
-              <button>Potato</button>
-              <button>Tomato</button>
+              <button>potato</button>
+              <button>tomato</button>
               <button>onion</button>
               <button>broccoli</button>
               <button>mushroom</button>
