minor text/style changes

--- a/recipe-api.html
+++ b/recipe-api.html
@@ -45,12 +45,12 @@
           </div>
         </div>
         <div id="ingredientsList">
-          <h3>All ingredients:</h3>
+          <h3>Pick/search:</h3>
           <div class="autocomplete-container">
             <input
               class="autocomplete-input"
               type="text"
-              placeholder="Search..."
+              placeholder="Search ingredients..."
             />
             <div class="autocomplete-list"></div>
           </div>
@@ -151,7 +151,7 @@
           </div>
         </div>
         <div id="usedIngredients">
-          <h3>Used ingredients:</h3>
+          <h3>Your ingredients:</h3>
           <small class="arrow">click below to remove</small>
           <div id="ingredientsWindow">
             <button value="water">water</button
