new input for number of recipes

--- a/recipe-api.html
+++ b/recipe-api.html
@@ -21,8 +21,14 @@
       <div id="overlay" class="hidden"></div>
       <div id="sidebar">
         <div id="formData">
-          <input type="number" id="numOfRecipes" min="1" max="15" value="3" />
-          <label for="numOfRecipes">Number of recipes</label>
+          <div id="num-container">
+            <div id="num-less"></div>
+            <div id="num-val">3</div>
+            <div id="num-more"></div>
+            <label for="numOfRecipes">Number of recipes</label>
+          </div>
+          <!-- <input type="number" id="numOfRecipes" min="1" max="15" value="3" /> -->
+
           <br />
           <div>
             <input
