--- a/poker-propability.html
+++ b/poker-propability.html
@@ -16,10 +16,27 @@
   </head>
   <body>
     <div id="board">
-      <div class="card-container"></div>
-      <div class="card-container"></div>
-      <div class="card-container"></div>
-      <div class="card-container"></div>
+      <div id="table">
+        <div class="card-container"></div>
+        <div class="card-container"></div>
+        <div class="card-container"></div>
+        <div class="card-container"></div>
+        <div class="card-container"></div>
+      </div>
+      <div class="player-container player-one">
+        <h3>Player 1</h3>
+        <div class="card-container"></div>
+        <div class="card-container"></div>
+      </div>
+      <div class="player-container">
+        <h3>Player 2</h3>
+        <div class="card-container"></div>
+        <div class="card-container"></div>
+      </div>
+
+      <div>
+        <button id="run">Run</button>
+      </div>
     </div>
     <script>
       document.write(
