--- a/poker-probability.html
+++ b/poker-probability.html
@@ -7,12 +7,12 @@
     <!--css versioning using js random number-->
     <script>
       document.write(
-        `<link rel="stylesheet" href="modules/poker-propability/poker-propability.css?v=${
+        `<link rel="stylesheet" href="modules/poker-probability/poker-probability.css?v=${
           Math.trunc(Math.random() * 10000) + 1
         }" />`
       );
     </script>
-    <title>Poker propability</title>
+    <title>Poker probability</title>
   </head>
   <body>
     <div id="board">
@@ -40,7 +40,7 @@
     </div>
     <script>
       document.write(
-        `<script src="modules/poker-propability/poker-propability.js?v="${
+        `<script src="modules/poker-probability/poker-probability.js?v="${
           Math.trunc(Math.random() * 10000) + 1
         }"><\/script>`
       );
