implemented demo poker calculator to main projects

--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
                 >What's in my fridge app</a
               >
             </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://xanoosh.github.io/portfolio/poker-probability.html"
+                >Texas Holdem Calculator</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -317,6 +324,23 @@
               <div class="col-lg-3 col-sm-6 mb-3">
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
+                    <h5 class="card-title">Quiz</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <p class="card-text">
+                      Excepteur sint occaecat cupidatat non proident, sunt in
+                      culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <a
+                      href="https://xanoosh.github.io/portfolio/quiz-api.html"
+                      class="btn btn-primary"
+                      >Link</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-3">
+                <div class="card" data-aos="fade-up">
+                  <div class="card-body">
                     <h5 class="card-title">Dice Game</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
                     <p class="card-text">
@@ -331,17 +355,35 @@
                   </div>
                 </div>
               </div>
+
               <div class="col-lg-3 col-sm-6 mb-3">
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
-                    <h5 class="card-title">Quiz</h5>
+                    <h5 class="card-title">"What's in my fridge" App</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
                     <p class="card-text">
                       Excepteur sint occaecat cupidatat non proident, sunt in
                       culpa qui officia deserunt mollit anim id est laborum.
                     </p>
                     <a
-                      href="https://xanoosh.github.io/portfolio/quiz-api.html"
+                      href="https://xanoosh.github.io/portfolio/recipe-api.html"
+                      class="btn btn-primary"
+                      >Link</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-3">
+                <div class="card" data-aos="fade-up">
+                  <div class="card-body">
+                    <h5 class="card-title">Texas Holdem Calculator</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <p class="card-text">
+                      Excepteur sint occaecat cupidatat non proident, sunt in
+                      culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <a
+                      href="https://xanoosh.github.io/portfolio/poker-probability.html"
                       class="btn btn-primary"
                       >Link</a
                     >
@@ -376,23 +418,6 @@
                     </p>
                     <a
                       href="https://xanoosh.github.io/portfolio/terraforming.html"
-                      class="btn btn-primary"
-                      >Link</a
-                    >
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-3 col-sm-6 mb-3">
-                <div class="card" data-aos="fade-up">
-                  <div class="card-body">
-                    <h5 class="card-title">"What's in my fridge" App</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
-                    <p class="card-text">
-                      Excepteur sint occaecat cupidatat non proident, sunt in
-                      culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                    <a
-                      href="https://xanoosh.github.io/portfolio/recipe-api.html"
                       class="btn btn-primary"
                       >Link</a
                     >
