added window for picking cards

--- a/poker-probability.html
+++ b/poker-probability.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <div id="board">
+      <div id="card-list"></div>
       <div id="table">
         <div class="card-container"></div>
         <div class="card-container"></div>
@@ -30,8 +31,8 @@
       <div class="player-container player-one">
         <h3>Player 1</h3>
         <div class="hand">
-          <div class="card-container"></div>
-          <div class="card-container"></div>
+          <div class="card-container active"></div>
+          <div class="card-container active"></div>
         </div>
         <p id="player-one-odds"></p>
       </div>
