its now possible to add table cards

--- a/poker-probability.html
+++ b/poker-probability.html
@@ -36,13 +36,15 @@
         </div>
         <p id="player-one-odds"></p>
       </div>
-      <div class="player-container">
-        <h3>Player 2</h3>
-        <div class="hand">
-          <div class="card-container"></div>
-          <div class="card-container"></div>
+      <div class="other-players">
+        <div class="player-container">
+          <h3>Player 2</h3>
+          <div class="hand">
+            <div class="card-container"></div>
+            <div class="card-container"></div>
+          </div>
+          <p id="player-two-odds"></p>
         </div>
-        <p id="player-two-odds"></p>
       </div>
       <p id="draw-odds"></p>
       <div>
