add/remove players and testing

--- a/poker-probability.html
+++ b/poker-probability.html
@@ -34,16 +34,17 @@
           <div class="card-container active"></div>
           <div class="card-container active"></div>
         </div>
-        <p id="player-one-odds"></p>
+        <p id="player-one-win"></p>
+        <p id="player-one-draw"></p>
       </div>
-      <div class="other-players">
+      <div class="btns">
+        <button id="remove">Remove</button> <button id="add">Add</button>
+      </div>
+      <div id="other-players">
         <div class="player-container">
           <h3>Player 2</h3>
-          <div class="hand">
-            <div class="card-container"></div>
-            <div class="card-container"></div>
-          </div>
-          <p id="player-two-odds"></p>
+          <p id="player-two-win"></p>
+          <p id="player-two-draw"></p>
         </div>
       </div>
       <p id="draw-odds"></p>
