4 players by default

--- a/poker-probability.html
+++ b/poker-probability.html
@@ -46,6 +46,16 @@
           <p id="player-two-win"></p>
           <p id="player-two-draw"></p>
         </div>
+        <div class="player-container">
+          <h3>Player 3</h3>
+          <p id="player-three-win"></p>
+          <p id="player-three-draw"></p>
+        </div>
+        <div class="player-container">
+          <h3>Player 4</h3>
+          <p id="player-four-win"></p>
+          <p id="player-four-draw"></p>
+        </div>
       </div>
       <p id="draw-odds"></p>
       <div>
